--- a/style.css
+++ b/style.css
@@ -81,7 +81,7 @@ p{
 .menu{
 	list-style:none;
 	font-family: 'Lobster', cursive;
-	position: absolute;
+	position: fixed;
 	top: 10px;
 	right: 30px;
 	z-index: 10;
@@ -102,4 +102,14 @@ p{
 .links:hover{
 	background-color: magenta;
 	
+}
+.article:hover{
+	color: forestgreen;
+	
+}
+html{
+	scroll-behavior: smooth;
+}
+a{
+	text-decoration: none;
 }
